<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_weather_info"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/ll_landing_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/layout_gap"
        android:weightSum="700">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:weightSum="400">

            <ImageView
                android:id="@+id/iv_refresh"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="55"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/btn_refresh"
                android:tint="@color/primary_text" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="400">

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/city"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_headline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="400">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/currentDate"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_headline_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="60">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5" />

            <TextView
                android:id="@+id/tv_temp_low"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="center"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_size_title_small"
                android:text="@string/low_temp" />

            <TextView
                android:id="@+id/tv_temp_tag"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center"
                android:text="@string/flag"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_size_headline_small" />

            <TextView
                android:id="@+id/tv_temp_high"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="center"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_size_title_small"
                android:text="@string/high_temp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="150"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="@dimen/layout_gap"
            android:weightSum="400">

            <TextView
                android:id="@+id/tv_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_temp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_headline_huge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.208"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="300"
                android:paddingLeft="20dp"
                android:orientation="vertical"
                android:weightSum="200">

                <ImageView
                    android:id="@+id/iv_weather"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="@dimen/layout_margin"
                    android:layout_marginEnd="@dimen/layout_margin"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:gravity="center"
                    android:src="@drawable/clear_day"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_temp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/text_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_margin"
                    android:layout_marginEnd="@dimen/layout_margin"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:text="@string/summary"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_title_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_weather" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_detail_info"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:layout_gravity="center"
            android:text="@string/detail_info" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>